Lyrics Search Done

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             </div>         
         </main>
     </div>
-
+<footer class="text-center">
+    <p>CopyRight 2020 &copy; All Receved By <a href="https://www.facebook.com/shakilmahammudofficial0/">SHAKIL</a></p>
+</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
